# liao

./: .gitignore  Plano.md  README.md  app.py  pyproject.toml
data/processed/: estacoes.csv  indicadores_anuais.csv  indicadores_estacao.csv  municipios.csv  scores.csv
docs/: apresentacao.html
notebooks/: 02_estacoes_mapa.ipynb
scripts/: baixar_estacoes_inmet.py  baixar_municipios_ibge.py  build_scores.py
src/hackathon/: ai.py  cluster.py  forecast.py  indices.py  io.py  score.py  viz.py
