[project]
name = "hackathon"
version = "0.1.0"
description = "Análise de dados meteorológicos da Bahia (INMET)"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "numpy>=1.26",
    "geopandas>=1.0",
    "shapely>=2.0",
    "scikit-learn>=1.4",
    "streamlit>=1.35",
    "streamlit-folium>=0.21",
    "anthropic>=0.40",
    "requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hackathon"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
